# Emelle

./: .gitlab-ci.yml  .gitmodules  HACKING.md  README.md  TECHNICAL_REPORT.md  dune-project  dune-workspace  emmeline.opam
app/: dune  main.ml
doc/: pattern-match-compilation.md  typechecking.md
editor/: blockspec.ml  compile.ml  dune  grammar  graphics.ml  index.html  main.cppo.ml  main.ml  stylesheet.css
examples/: hello_world.ml  lists.ml  naturals.ml  records.ml
src/: dune
src/anf/: anf.ml  lower.ml  pattern.ml
src/common/: ident.ml  ir.ml  ir.mli  literal.ml  message.ml  package.ml  path.ml  qual_id.ml
src/desugar/: desugar.ml  desugar.mli  elab.ml  env.ml  env.mli  term.ml
src/driver/: dune  pipeline.cppo.ml  pipeline.ml  prettyprint.ml
src/regalloc/: asm.ml  color.ml  color.mli  liveness.ml  liveness.mli  post_ssa.ml  ssa2.ml  to_asm.ml  to_asm.mli
src/ssa/: ssa.ml  ssa_of_anf.ml  ssa_of_anf.mli
src/syntax/: ast.ml  dune  lexer.mll  parser.mly  syntax_error.ml
src/typing/: kind.ml  type.ml  typecheck.ml  typecheck.mli  typedtree.ml
src/vm/: eval.ml  io.ml
std/: graphics.ml  io.ml  list.ml  option.ml
test/: dune  test_env.ml  test_integration.ml  test_syntax.ml  test_type.ml  test_typecheck.ml
try/: dune  index.html  main.ml  stylesheet.css
