(lang dune 1.10)
(name emmeline)
(using menhir 1.0)
(generate_opam_files true)

(license MPL-2.0)
(authors "Types Logics Cats" "TheAspiringHacker@protonmail.com")
(maintainers "Types Logics Cats" "TheAspiringHacker@protonmail.com")
(source (uri "git://gitlab.com/emmeline/emmeline.git"))
(bug_reports "https://gitlab.com/emmeline/emmeline/issues")
(homepage "https://gitlab.com/emmeline/emmeline")

(package
  (name emmeline)
  (synopsis "An ML dialect")
  (description "An ML dialect")
  (depends
    (cppo (and :build (>= 1.6)))
    (dune (>= 2.0))
    (base (and (>= v0.13) (< v0.14)))
    (ppx_compare (and (>= v0.13) (< v0.14)))
    (ppx_hash (and (>= v0.13) (< v0.14)))
    (ppx_let (and (>= v0.13) (< v0.14)))
    (menhir (>= 20190924))
  )
)
