opam-version: "2.0"
name: "emmeline"
version: "prelease, OPAM file created to work with Dune public_name"
synopsis: "An ML dialect"
description: """
An ML dialect
"""
maintainer: "Types Logics Cats TheAspiringHacker@protonmail.com"
authors: "Types Logics Cats TheAspiringHacker@protonmail.com"
license: "MPL 2.0"
homepage: "https://gitlab.com/emmeline/emmeline"
bug-reports: "https://gitlab.com/emmeline/emmeline/issues"
dev-repo: "https://gitlab.com/emmeline/emmeline"
depends: [
  "dune" {build & >= "1.2.1"}
  "base" {">=v0.11" & "<v0.12"}
  "ppx_jane" {">=v0.11" & "<v0.12"}
  "menhir"
]
build: [
  ["dune" "build" "-p" name]
]
