opam-version: "2.0"
name: "emmeline"
version: "0.1.0"
synopsis: "An ML dialect"
description: """
An ML dialect
"""
maintainer: "Types Logics Cats TheAspiringHacker@protonmail.com"
authors: "Types Logics Cats TheAspiringHacker@protonmail.com"
license: "MPL 2.0"
homepage: "https://gitlab.com/emmeline/emmeline"
bug-reports: "https://gitlab.com/emmeline/emmeline/issues"
dev-repo: "git+https://gitlab.com/emmeline/emmeline.git"
depends: [
  "cppo" {build & >= "1.6.0"}
  "dune" {build & >= "1.10.0"}
  "base" {">=v0.12" & < "v0.13"}
  "ppx_compare" {>= "v0.12" & < "v0.13"}
  "ppx_hash" {>= "v0.12" & < "v0.13"}
  "ppx_let" {>= "v0.12" & < "v0.13"}
  "menhir" {>= "20181113"}
]
build: [
  ["dune" "subst"]
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
