(rule
  (targets main.ml)
  (deps    (:first-dep main.cppo.ml) (source_tree ../std))
  (action  (run %{bin:cppo} %{first-dep} -o %{targets} -n)))

(rule
  (targets main.cppo.ml)
  (action (run ../bexp/dsl/bexp_dsl.exe grammar -o main.cppo.ml))
  (deps grammar (package bexp)))

(executable
  (name main)
  (libraries base bexp emmeline)
  (preprocess (pps js_of_ocaml-ppx ppx_bexp ppx_let)))
